--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Avatar</title>
     <style>
         ::backdrop{
-            color: aqua;
+            color: rgb(0, 255, 115);
         }
         body{
             display: flex;
@@ -18,7 +18,7 @@
         h1{
             color: blue;
         }
-        h1{   
+        h1 {  
             font-family: 'Courier New', Courier, monospace;
             font-size: :32px;
         }
